# rotom

./: .gitignore  Cargo.toml  README.md  config.toml  exmo_network_info.json  htx_network_info.json  kucoin_network_info.json  okx_network_info.json  t.json  temp.json  temppp.json  tempppp.json  woox_network_info.json
rotom-data/: Cargo.toml  README.md
rotom-data/examples/: dynamic_stream.rs  multi_stream.rs  signed_get_request.rs  single_stream.rs
rotom-data/src/: error.rs  lib.rs  metric.rs  playground.rs  temp.rs
rotom-data/src/assets/: level.rs  mod.rs  orderbook.rs
rotom-data/src/event_models/: event_book.rs  event_trade.rs  market_event.rs  mod.rs
rotom-data/src/exchange/: mod.rs
rotom-data/src/exchange/ascendex/: channel.rs  l2.rs  market.rs  mod.rs  model.rs
rotom-data/src/exchange/binance/: channel.rs  l2.rs  market.rs  mod.rs  model.rs
rotom-data/src/exchange/binance/private/: auth.rs  mod.rs
rotom-data/src/exchange/binance/public/: mod.rs  model.rs
rotom-data/src/exchange/binance/public_http/: binance_public_http_client.rs  mod.rs
rotom-data/src/exchange/binance/public_ws_stream/: channel.rs  l2.rs  mod.rs  model.rs
rotom-data/src/exchange/bitstamp/: channel.rs  market.rs  mod.rs  model.rs
rotom-data/src/exchange/coinex/: channel.rs  market.rs  mod.rs  model.rs
rotom-data/src/exchange/exmo/: channel.rs  market.rs  mod.rs  model.rs
rotom-data/src/exchange/htx/: channel.rs  market.rs  mod.rs  model.rs
rotom-data/src/exchange/kucoin/: channel.rs  market.rs  mod.rs  model.rs
rotom-data/src/exchange/okx/: channel.rs  market.rs  mod.rs  model.rs
rotom-data/src/exchange/phemex/: channel.rs  l2.rs  market.rs  mod.rs  model.rs
rotom-data/src/exchange/poloniex/: channel.rs  l2.rs  market.rs  mod.rs  model.rs
rotom-data/src/exchange/poloniex/public/: l2.rs  mod.rs
rotom-data/src/exchange/poloniex/public_http/: mod.rs  poloniex_public_http_client.rs
rotom-data/src/exchange/poloniex/public_ws_stream/: channel.rs  l2.rs  mod.rs  model.rs
rotom-data/src/exchange/woox/: channel.rs  market.rs  mod.rs  model.rs
rotom-data/src/model/: event_book.rs  event_book_snapshot.rs  event_trade.rs  market_event.rs  mod.rs  network_info.rs  ticker_info.rs
rotom-data/src/protocols/: mod.rs
rotom-data/src/protocols/http/: auth.rs  client.rs  client2.rs  http_parser.rs  mod.rs  request_builder.rs  rest_request.rs
rotom-data/src/protocols/http/private/: mod.rs
rotom-data/src/protocols/http/rest/: client.rs  mod.rs
rotom-data/src/protocols/ws/: mod.rs  poll_next.rs  ws_parser.rs
rotom-data/src/shared/: de.rs  subscription_models.rs  utils.rs
rotom-data/src/streams/: consumer.rs  dynamic_stream.rs  mod.rs  validator.rs
rotom-data/src/streams/builder/: dynamic.rs  mod.rs  multi.rs  single.rs
rotom-data/src/transformer/: book.rs  mod.rs  stateless_transformer.rs
rotom-main/: Cargo.toml  temp.txt
rotom-main/src/: event.rs  lib.rs  main.rs
rotom-main/src/data/: live.rs  mod.rs
rotom-main/src/engine/: error.rs  mod.rs  trader.rs
rotom-main/src/execution/: mod.rs  simulated.rs
rotom-main/src/oms/: allocator.rs  error.rs  mod.rs  portfolio.rs  position.rs  risk.rs
rotom-main/src/oms/repository/: in_memory.rs  mod.rs  redis.rs
rotom-main/src/portfolio/: mod.rs
rotom-main/src/portfolio/repository/: in_memory.rs
rotom-main/src/statistic/: mod.rs
rotom-main/src/statistic/metric/: drawdown.rs  mod.rs
rotom-main/src/statistic/summary/: drawdown.rs  mod.rs  pnl.rs  trading.rs
rotom-main/src/strategy/: mod.rs  spread.rs
rotom-main/src/trader/: arb_trader.rs  mod.rs  single_trader.rs
rotom-main/src/trader/spot_arb_trader/: builder.rs  generate_decision.rs  mod.rs  trader.rs
rotom-oms/: Cargo.toml
rotom-oms/src/: error.rs  event.rs  lib.rs
rotom-oms/src/exchange/: errors.rs  mod.rs
rotom-oms/src/exchange/binance/: account_data_stream.rs  auth.rs  binance_client.rs  mod.rs  request_builder.rs
rotom-oms/src/exchange/binance/requests/: account_data.rs  balance.rs  cancel_order.rs  mod.rs  new_order.rs  user_data.rs  (+1 more)
rotom-oms/src/exchange/poloniex/: account_data_stream.rs  auth.rs  mod.rs  poloniex_client.rs  request_builder.rs
rotom-oms/src/execution/: error.rs  mod.rs  simulated.rs
rotom-oms/src/execution/arena/: arb_trader_arena.rs  mod.rs
rotom-oms/src/execution/exchange_client/: mod.rs
rotom-oms/src/execution/exchange_interface/: mod.rs
rotom-oms/src/execution/model/: balance.rs  mod.rs  order.rs  trade.rs
rotom-oms/src/execution_manager/: builder.rs  manager.rs  mod.rs  request.rs
rotom-oms/src/model/: account_data.rs  account_response.rs  balance.rs  execution_request.rs  execution_response.rs  mod.rs  order.rs  trade.rs
rotom-oms/src/order_manager/: balance_builder.rs  manager.rs  maps.rs  mod.rs
rotom-oms/src/portfolio/: allocator.rs  error.rs  mod.rs  position.rs  position2.rs
rotom-oms/src/portfolio/allocator/: default_allocator.rs  mod.rs  spot_arb_allocator.rs
rotom-oms/src/portfolio/persistence/: in_memory.rs  in_memory2.rs  mod.rs  redis.rs  spot_in_memory.rs
rotom-oms/src/portfolio/portfolio_type/: arb_portfolio.rs  default_portfolio.rs  mod.rs  spot_portfolio.rs
rotom-oms/src/portfolio/portfolio_types/: default_portfolio.rs  mod.rs
rotom-oms/src/portfolio/repository/: mod.rs
rotom-oms/src/portfolio/risk_manager/: default_risk_manager.rs  mod.rs
rotom-oms/src/portfolio/spot_portfolio/: portfolio.rs
rotom-oms/src/statistic/: algorithm.rs  dispersion.rs  error.rs  mod.rs
rotom-oms/src/statistic/metric/: mod.rs
rotom-oms/src/statistic/summary/: drawdown.rs  pnl.rs  trading.rs
rotom-scanner/: Cargo.toml
rotom-scanner/src/: data_streams.rs  handlers.rs  lib.rs  main.rs  mock_data.rs  scanner.rs
rotom-scanner/src/data/: data_streams.rs  mod.rs  stream_chunk.rs
rotom-scanner/src/server/: handlers.rs  mod.rs  server_channels.rs
rotom-scanner/src/spot_arb_scanner/: mod.rs  network_status_stream.rs  scanner.rs
rotom-scanner/src/spot_scanner/: core_types.rs  mock_data.rs  mod.rs  scanner.rs
rotom-strategy/: Cargo.toml
rotom-strategy/src/: lib.rs  spread.rs
(+178 files in other folders)
