[package]
name = "rotom-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
tokio-tungstenite = { workspace = true, features = ["native-tls"]}
futures-util = { workspace = true, default-features = false, features = ["sink", "std"] }
futures = { workspace = true}
tokio-stream = { workspace = true, features = ["sync"] }
pin-project = { workspace = true}
async-trait = { workspace = true}

# Protocol
reqwest = { workspace = true, features = ["json"]}

# SerDe
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }

# Logging
tracing = { workspace = true}
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

# Misc
thiserror = { workspace = true}
chrono = { workspace = true, features = ["serde"]}
vecmap-rs = { workspace = true}
itertools = { workspace = true}
bytes = { workspace = true }

# Crytographic Signatures
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }