[package]
name = "rotom-main"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal
rotom-data = { path = "../rotom-data" }
rotom-strategy = { path = "../rotom-strategy" }
rotom-oms = { path = "../rotom-oms"}


# Async
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
futures = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

# Error
thiserror = { workspace= true }

# Misc
chrono = { workspace = true, features = ["serde"]}
uuid = { workspace = true, features = ["v4", "serde"]}
parking_lot = { workspace = true }
prettytable-rs = { workspace = true }

# SerDe
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }