[package]
name = "rotom-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
rotom-data = { path = "../rotom-data" }

# Async
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
futures = { workspace = true }
actix-web ={ workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

# Error
thiserror = { workspace = true }

# Misc
chrono = { workspace = true, features = ["serde"]}
ordered-float = { workspace = true }