[package]
name = "rotom-strategy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal
rotom-data = { path = "../rotom-data"}

# Misc
chrono = { workspace = true, features = ["serde"]}

# SerDe
serde = { workspace = true, features = ["derive"] }